5-rabbit-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-sit-deployment
  labels:
    app: rabbitmq-sit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq-sit
  template:
    metadata:
      labels:
        app: rabbitmq-sit
      annotations:
        "pod.beta.kubernetes.io/hostname": rabbit-rc1
    spec:
      containers:
      - name: rabbitmq-sit
        image: rabbitmq:management-alpine
        imagePullPolicy: Always
        ports:
          - containerPort: 15672
            name: ui-port
          - containerPort: 5672
            name: http-port
      volumes:
      - name: rabbitmq-sit-data
        persistentVolumeClaim:
          claimName: rabbitmq-sit-pv-claim
