8-rabbit-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq-sit
  namespace: sit
  labels:
    app: rabbitmq-sit
spec:
  serviceName: rabbitmq-sit
  updateStrategy:
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq-sit
  template:
    metadata:
      labels:
        app: rabbitmq-sit
    spec:
      serviceAccountName: rabbitmq-sit
      terminationGracePeriodSeconds: 10
      containers:
      - name: rabbitmq-sit
        image: rabbitmq:3.8.6-management
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 15672
          name: http
          protocol: TCP
        - containerPort: 5672
          name: amqp
          protocol: TCP
        resources:
          limits:
            cpu: 1.8
            memory: 3584Mi
          requests:
            cpu: 300m
            memory: 512Mi
        volumeMounts:
        - mountPath: /var/lib/rabbitmq
          name: data
          readOnly: false
        - mountPath: /etc/rabbitmq
          name: config-volume
      volumes:
      - configMap:
          defaultMode: 420
          items:
          - key: rabbitmq.conf
            path: rabbitmq.conf
          - key: enabled_plugins
            path: enabled_plugins
          name: rabbitmq-sit-config
        name: config-volume
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: "standard"
      resources:
        requests:
          storage: 10Gi
