7-rabbit-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: rabbitmq-sit
  namespace: sit
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"ports": {"15672":"rabbitmq-sit"}}'
    cloud.google.com/app-protocols: '{"rabbitmq-sit":"HTTPS"}'
spec:
  type: NodePort
  selector:
    app: rabbitmq-sit
  ports:
   - name: rabbitmq-mgmt-port
     protocol: TCP
     port: 15672
     targetPort: 15672
   - name: rabbitmq-amqp-port
     protocol: TCP
     port: 5672
     targetPort: 5672
